<resources>
    <string name="app_name">Segunda Aplicacion</string>
    <string name="title_activity_login">Iniciar Sesion</string>

    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="nuevo">Nuevo</string>
    <string name="editar">Editar</string>
    <string name="nombre">Nombre</string>
    <string name="eliminar">Eliminar</string>
    <string name="volver">Volver</string>
    <string name="mis_rutas">Mis Rutas</string>
    <string name="pedidos_cliente">Pedidos Cliente</string>
    <string name="activo">Activo</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="direccion">DIRECCIÓN</string>
    <string name="buscar_direccion">Buscar Dirección</string>
    <string name="asignar_direccion_pedido">Asignar dirección a pedido</string>
    <string name="id" translatable="false">ID</string>
    <string name="fecha">Fecha</string>
    <string name="cliente">Cliente</string>
    <string name="mapa">Mapa</string>
    <string name="producto">Producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="moneda_pesos" translatable="false">$</string>
    <string name="entregado">Entregado</string>
    <string name="mis_pedidos">Mis Pedidos</string>
    <string name="vendedor">Vendedor</string>
    <string name="total">Total</string>
    <string name="pedido">Pedido</string>
    <string name="valor">Valor</string>
    <string name="productos">Productos</string>
    <string name="clientes">Clientes</string>
    <string name="pedidos">Pedidos</string>
    <string name="rutas">Rutas</string>
    <string name="opcion_erronea_cliente">OPCIÓN ERRONEA CLIENTE</string>
    <string name="usuario_correcto">Usuario correcto</string>
    <string name="Usuario_contrasenia_incorrectos">Usuario o contraseña incorrectos</string>
    <string name="lugar_no_ingresado">Lugar no ingresado</string>
    <string name="sin_permisos_localidad">Sin permisos para localidad</string>
    <string name="localidad_no_disponible">Localidad no disponible</string>
    <string name="debe_activar_gps">Debe activar el GPS</string>
    <string name="desea_activar">¿Desea activarlo?</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="disponible">Disponible</string>
    <string name="no_disponible">No disponible</string>
    <string name="no_entregado">No Entregado</string>
    <string name="cliente_agrega_existe">El cliente ya existe. Intente con otro nombre</string>
    <string name="cliente_agrega_exito">Cliente agregado con exito</string>
    <string name="cliente_agrega_error">Error al intentar agregar un cliente</string>
    <string name="cliente_agrega_error_exp">Error al intentar agregar un cliente</string>
    <string name="cliente_modifica_exito">Se modifico el cliente con exito</string>
    <string name="cliente_modifica_error_exp">Error al intentar recuperar el cliente</string>
    <string name="cliente_elimina_exito">Se elimino el cliente con exito (lógico)</string>
    <string name="cliente_elimina_error">El cliente ya ha sido eliminado (lógico)</string>
    <string name="cliente_elimina_error_exp">Error al intentar elminar el cliente</string>
    <string name="pedido_agrega_exito">Pedido agregado con exito</string>
    <string name="pedido_agrega_error">Error al intentar agregar pedido</string>
    <string name="pedido_agrega_error_exp">Error al intentar agregar pedido</string>
    <string name="pedido_modifica_exito">Se modifico el pedido con exito</string>
    <string name="pedido_modifica_error_exp">Error al intentar recuperar el pedido</string>
    <string name="producto_elimina_exito">Se elminó el producto con exito (lógico)</string>
    <string name="producto_elimina_error">El producto ya ha sido eliminado (lógico)</string>
    <string name="producto_elimina_error_exp">Error al intentar elminar el producto</string>
    <string name="title_activity_configuracion">Configuración</string>
    <string name="configuracion_fecha">Fecha</string>
    <string name="configuracion_defecto">Por defecto</string>
    <string name="configuracion_moneda">Moneda</string>
    <string name="configuracion_moneda_servicio">Servicio Online</string>
    <string name="configuracion_pesos_chilenos">Pesos Chilenos (CLP)</string>
    <string name="configuracion_dolares_americanos">Dolares Americanos (USD)</string>
    <string name="configuracion_fecha_dd_MM_aaaa">dd/MM/aaaa (31/12/1990)</string>
    <string name="configuracion_fecha_MM_dd_aaaa">MM/dd/aaaa (12/31/1990)</string>
    <string name="configuracion_fecha_dd_MMM_aaaa">dd MMM, aaaa (31 Dic, 1990)</string>
    <string name="configuracion_fecha_MMM_dd_aaaa">MMM dd, aaaa (Dic 31, 1990)</string>
    <string name="configuracion">Configuración</string>
    <string name="configuracion_no_encontrado">Configuración no encontrada</string>
    <string name="configuracion_modifica_exito">Configuración modificada con exito</string>
    <string name="configuracion_modifica_error_exp">Error al intentar modificar la configuración</string>
</resources>
