<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:background="@drawable/list_divider">
    <!-- El pedido en formato de pantalla normal solo tiene los simbolos del pedido sin los
    nombres de identificando de la información-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:minWidth="@dimen/minWidthRowPedido"
            android:id="@+id/txv_row_texto_pedido"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txv_row_id_pedido"
            android:layout_marginRight="@dimen/textMarginRow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/vendedor"
            android:minWidth="@dimen/minWidthRow"
            android:id="@+id/textView7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txv_row_vendedor"/>

    </LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:minWidth="@dimen/minWidthRowPedido"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_cliente"
                android:padding="@dimen/paddingButton"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txv_row_cliente"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:minWidth="@dimen/minWidthRowPedido"
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_producto"
                android:padding="@dimen/paddingButton"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txv_row_producto"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:minWidth="@dimen/minWidthRowPedido"
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_direccion"
            android:padding="@dimen/paddingButton"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txv_row_direccion"/>
    </LinearLayout>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginRight="@dimen/minWidthRowPedido">
        <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cantidad"
                android:minWidth="@dimen/minWidthRow"
                android:id="@+id/textView5"
                android:layout_marginRight="@dimen/textMarginRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/txv_row_catidad_producto"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/total"
                android:id="@+id/textView2"
                android:layout_marginRight="@dimen/textMarginRow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txv_row_precio_pedido"
                android:layout_marginRight="@dimen/textMarginRow" />
        </LinearLayout>
    </TableRow>
</LinearLayout>